[B]Please utilize Twilight Tips (Tools->Tips for Twilight Use) to catch up on any important new features. New features will be highlighted with a [COLOR chartreuse]NEW!!![/COLOR] label.[/B]

[COLOR dodgerblue][B]Version 3.2.71[/B][/COLOR]
- Limit Real Debrid hashes check count to 785 to avoid API limits (real_debrid_api.py).

[COLOR dodgerblue][B]Version 3.2.70[/B][/COLOR]
- Fix source_utils.py string7 regex for anime matching. (https://github.com/Tikipeter/tikipeter.github.io/issues/48)

[COLOR dodgerblue][B]Version 3.2.69[/B][/COLOR]
- OpenSubtitles - Fix total_pages definition according to API change.

[COLOR dodgerblue][B]Version 3.2.68[/B][/COLOR]
- Ktuvit - Improve subtitle_row_regex to handle "כתובית מתוקנת" flag in subtitle name (burekas fix).
- Rename "YIFY Subtitles" website to "YIFY".
- Refactor "calculate_sync_percent_between_subtitles_and_twilight_source" function (sync to DarkSubs).

[COLOR dodgerblue][B]Version 3.2.67[/B][/COLOR]
- Hebrew Subtitle Matching - Add YIFY Subtitles (Movies only) subtitles website source (https://yifysubtitles.ch).

[COLOR dodgerblue][B]Version 3.2.66[/B][/COLOR]
- Tools --> Account Manager --> Trakt - Generate QR image to direct authorization without inserting code.
- Trakt Authorization - Auto open direct authorization page on Windows browser / Android Chrome app.

[COLOR dodgerblue][B]Version 3.2.65[/B][/COLOR]
- OpenSubtitles - Optimize multiple subtitles pages API requests performance.
- OpenSubtitles - Get accurate subtitle release as subtitle name.

[COLOR dodgerblue][B]Version 3.2.64[/B][/COLOR]
- Ktuvit - Add constant scraping URLs, Add sub name characters_to_remove, comment out manual EngName/HebName results matching.

[COLOR dodgerblue][B]Version 3.2.63[/B][/COLOR]
- Tools --> Account Manager --> Real Debrid - Generate QR image to direct authorization without inserting code.
- Real Debrid Authorization - Auto open direct authorization page on Windows browser / Android Chrome app.
